--- a/hello-react/ch2/es6/index.html
+++ b/hello-react/ch2/es6/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="text/javascript" src="es6.js"></script>
+    <script type="text/javascript" src="es6_promise.js"></script>
 </head>
 <body>
 
